[package]
name = "oblivion_alchemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Used for GUI
eframe = "0.16.0" # Gives us egui, epi and web+native backends

strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

lazy_static = "1.4.0"